Added context support. Started on tests.